# bobleesj.widget

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  OPTIMIZATION.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
js/: CONFIG.ts  components.tsx  reconstruct.css  reconstruct.tsx  shared.ts  show2d.css  show2d.tsx  show3d.tsx  show4dstem.css  show4dstem.tsx  webgpu-fft.ts
js/core/: canvas.ts  colors.ts  index.ts
notebooks/: show2d_multiple.ipynb  show2d_single.ipynb  show2d_single_sizes.ipynb  show3d.ipynb
scripts/: run_notebooks.py
src/bobleesj/widget/: __init__.py  array_utils.py  reconstruct.py  show2d.py  show3d.py  show4dstem.py  show5dstem.py  synthetic.py
tests/: test_widgets.py
